--- a/crop-progress.html
+++ b/crop-progress.html
@@ -124,7 +124,7 @@
 
         <div class="hero">
             <h1>🌾 Crop Progress & Conditions</h1>
-            <p>Weekly USDA reports on planting, growth, and crop conditions • Released Mondays at 4 PM ET (Apr-Nov)</p>
+            <p>Weekly <span class="tip" data-tip="United States Department of Agriculture">USDA</span> reports on planting, growth, and crop conditions • Released Mondays at 4 PM ET (Apr-Nov)</p>
         </div>
 
         <div class="filters">
@@ -159,8 +159,8 @@
         <!-- Quick Data Access -->
         <div class="panel">
             <div class="panel-head">
-                <h2>📊 View Official USDA Data</h2>
-                <span class="badge">Opens USDA NASS</span>
+                <h2>📊 View Official <span class="tip" data-tip="United States Department of Agriculture">USDA</span> Data</h2>
+                <span class="badge">Opens USDA <span class="tip" data-tip="National Agricultural Statistics Service — USDA data and surveys">NASS</span></span>
             </div>
             <div class="panel-body">
                 <div class="stage-grid" id="stageLinks"></div>
@@ -231,12 +231,12 @@
             <div class="panel-head"><h2>🔗 Official Data Sources</h2></div>
             <div class="panel-body">
                 <div class="links-grid">
-                    <a href="https://www.nass.usda.gov/Publications/Todays_Reports/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>Today's Reports</strong><span>Latest NASS publications</span></a>
+                    <a href="https://www.nass.usda.gov/Publications/Todays_Reports/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>Today's Reports</strong><span>Latest <span class="tip" data-tip="National Agricultural Statistics Service — USDA data and surveys">NASS</span> publications</span></a>
                     <a href="https://quickstats.nass.usda.gov/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>NASS Quick Stats</strong><span>Full historical data</span></a>
                     <a href="https://www.nass.usda.gov/Charts_and_Maps/Crop_Progress_&_Condition/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>Crop Progress Maps</strong><span>Visual data from NASS</span></a>
-                    <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>WASDE Reports</strong><span>Monthly supply/demand</span></a>
+                    <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer" class="ext-link"><strong><span class="tip" data-tip="World Ag Supply &amp; Demand Estimates — monthly USDA report that moves markets">WASDE</span> Reports</strong><span>Monthly supply/demand</span></a>
                     <a href="/calendar.html" class="ext-link"><strong>USDA Calendar</strong><span>All report dates</span></a>
-                    <a href="/gdu.html" class="ext-link"><strong>GDU Calculator</strong><span>Track growing degrees</span></a>
+                    <a href="/gdu.html" class="ext-link"><strong><span class="tip" data-tip="Growing Degree Units — accumulated heat units for tracking crop development">GDU</span> Calculator</strong><span>Track growing degrees</span></a>
                 </div>
             </div>
         </div>
