--- a/drought.html
+++ b/drought.html
@@ -190,7 +190,7 @@
                     <div class="map-wrap">
                         <img src="https://droughtmonitor.unl.edu/data/png/current/current_usdm.png" alt="Current US Drought Monitor Map" id="droughtMap" loading="lazy">
                     </div>
-                    <div class="map-label">Source: <a href="https://droughtmonitor.unl.edu/" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">US Drought Monitor</a> (NOAA/USDA/UNL)</div>
+                    <div class="map-label">Source: <a href="https://droughtmonitor.unl.edu/" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">US Drought Monitor</a> (NOAA/<span class="tip" data-tip="United States Department of Agriculture">USDA</span>/UNL)</div>
                 </div>
             </div>
 
@@ -225,21 +225,21 @@
                                 <td>Moderate</td>
                                 <td>Crop stress visible. Yields expected below normal. Dryland crops suffering.</td>
                                 <td>Hay supplies tightening. Stock ponds declining. Early weaning considered.</td>
-                                <td>Apply for FSA emergency loans. Check crop insurance deadlines.</td>
+                                <td>Apply for <span class="tip" data-tip="Farm Service Agency — USDA office for farm programs, loans, and payments">FSA</span> emergency loans. Check crop insurance deadlines.</td>
                             </tr>
                             <tr>
                                 <td><span class="impact-level" style="background:var(--d2);">D2</span></td>
                                 <td>Severe</td>
                                 <td>Significant crop losses likely. Irrigation demand high. Corn pollination at risk.</td>
                                 <td>Feed costs rising sharply. Herd reduction begins. Water hauling needed.</td>
-                                <td>File prevented planting claims. Contact FSA for Emergency Conservation Program.</td>
+                                <td>File prevented planting claims. Contact <span class="tip" data-tip="Farm Service Agency — USDA office for farm programs, loans, and payments">FSA</span> for Emergency Conservation Program.</td>
                             </tr>
                             <tr>
                                 <td><span class="impact-level" style="background:var(--d3);color:#fff;">D3</span></td>
                                 <td>Extreme</td>
                                 <td>Widespread crop failure. Irrigation restrictions possible. No-till considered permanent.</td>
                                 <td>Major destocking. Emergency feed assistance needed. Water emergencies.</td>
-                                <td>USDA disaster designation likely. Apply for LFP, ELAP, TAP programs.</td>
+                                <td><span class="tip" data-tip="United States Department of Agriculture">USDA</span> disaster designation likely. Apply for LFP, ELAP, TAP programs.</td>
                             </tr>
                             <tr>
                                 <td><span class="impact-level" style="background:var(--d4);color:#fff;">D4</span></td>
@@ -266,7 +266,7 @@
                             <tr><td><strong>ELAP</strong></td><td>Emergency Livestock Assistance</td><td>Livestock losses from drought</td><td><a href="https://www.fsa.usda.gov/programs-and-services/disaster-assistance-program/emergency-assist-for-livestock-background/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
                             <tr><td><strong>ECP</strong></td><td>Emergency Conservation</td><td>Fence, water facility repair</td><td><a href="https://www.fsa.usda.gov/programs-and-services/conservation-programs/emergency-conservation/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
                             <tr><td><strong>EM Loans</strong></td><td>Emergency Farm Loans</td><td>Disaster designation by county</td><td><a href="https://www.fsa.usda.gov/programs-and-services/farm-loan-programs/emergency-farm-loans/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
-                            <tr><td><strong>CRP Haying</strong></td><td>CRP emergency haying/grazing</td><td>D2+ in county</td><td><a href="https://www.fsa.usda.gov/programs-and-services/conservation-programs/conservation-reserve-program/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Info →</a></td></tr>
+                            <tr><td><strong><span class="tip" data-tip="Conservation Reserve Program — annual rental payments for retiring land">CRP</span> Haying</strong></td><td><span class="tip" data-tip="Conservation Reserve Program — annual rental payments for retiring land">CRP</span> emergency haying/grazing</td><td>D2+ in county</td><td><a href="https://www.fsa.usda.gov/programs-and-services/conservation-programs/conservation-reserve-program/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Info →</a></td></tr>
                         </tbody>
                     </table>
                 </div>
