--- a/exports.html
+++ b/exports.html
@@ -117,7 +117,7 @@
 
         <div class="hero">
             <h1>🚢 Export Sales Tracker</h1>
-            <p>USDA weekly export sales data • Track grain demand from the world's largest buyers</p>
+            <p><span class="tip" data-tip="United States Department of Agriculture">USDA</span> weekly export sales data • Track grain demand from the world's largest buyers</p>
         </div>
 
         <div class="tabs">
@@ -195,7 +195,7 @@
                         <div class="buyer-card"><div class="flag">🇯🇵</div><div class="name">Japan</div><div class="desc">Premium classes</div></div>
                         <div class="buyer-card"><div class="flag">🇵🇭</div><div class="name">Philippines</div><div class="desc">Growing demand</div></div>
                         <div class="buyer-card"><div class="flag">🇰🇷</div><div class="name">S. Korea</div><div class="desc">Feed wheat</div></div>
-                        <div class="buyer-card"><div class="flag">🇳🇬</div><div class="name">Nigeria</div><div class="desc">HRW demand</div></div>
+                        <div class="buyer-card"><div class="flag">🇳🇬</div><div class="name">Nigeria</div><div class="desc"><span class="tip" data-tip="Hard Red Winter wheat — grown in central US, used for bread flour">HRW</span> demand</div></div>
                     </div>
                 </div></div>
                 <div class="panel"><div class="panel-head"><h2>📋 Key Wheat Export Facts</h2></div><div class="panel-body">
@@ -234,7 +234,7 @@
                     <div class="three-col">
                         <div style="background:var(--bg);padding:14px;border-radius:8px;">
                             <h4 style="color:var(--accent);margin:0 0 8px;font-size:0.9rem;">Net Sales</h4>
-                            <p style="font-size:0.8rem;color:var(--dim);">New commitments minus cancellations. Positive = new demand. Compare to weekly pace needed to meet USDA projection.</p>
+                            <p style="font-size:0.8rem;color:var(--dim);">New commitments minus cancellations. Positive = new demand. Compare to weekly pace needed to meet <span class="tip" data-tip="United States Department of Agriculture">USDA</span> projection.</p>
                         </div>
                         <div style="background:var(--bg);padding:14px;border-radius:8px;">
                             <h4 style="color:var(--accent);margin:0 0 8px;font-size:0.9rem;">Exports (Shipments)</h4>
