--- a/farmdoc.html
+++ b/farmdoc.html
@@ -217,7 +217,7 @@
                             <ul class="tool-features">
                                 <li>Revenue Protection (RP) premiums</li>
                                 <li>Yield Protection (YP) comparisons</li>
-                                <li>SCO & ECO add-on coverage</li>
+                                <li><span class="tip" data-tip="Supplemental Coverage Option — area-based crop insurance add-on">SCO</span> & <span class="tip" data-tip="Enhanced Coverage Option — area-based coverage above SCO">ECO</span> add-on coverage</li>
                                 <li>Enterprise vs. optional units</li>
                                 <li>County-level customization</li>
                             </ul>
@@ -254,8 +254,8 @@
                     <!-- ARC/PLC Calculator -->
                     <div class="tool-card">
                         <div class="tool-card-header">
-                            <h3>🏛️ ARC/PLC Calculator</h3>
-                            <p>Compare Agriculture Risk Coverage (ARC-CO) vs. Price Loss Coverage (PLC) for Farm Bill decisions.</p>
+                            <h3>🏛️ <span class="tip" data-tip="Agriculture Risk Coverage — county-based revenue safety net">ARC</span>/<span class="tip" data-tip="Price Loss Coverage — reference price safety net program">PLC</span> Calculator</h3>
+                            <p>Compare Agriculture Risk Coverage (<span class="tip" data-tip="Agriculture Risk Coverage — county-based revenue safety net">ARC</span>-CO) vs. Price Loss Coverage (<span class="tip" data-tip="Price Loss Coverage — reference price safety net program">PLC</span>) for Farm Bill decisions.</p>
                         </div>
                         <div class="tool-card-body">
                             <div class="tool-meta">
@@ -324,7 +324,7 @@
                     
                     <a href="https://farmdoc.illinois.edu/assets/fast-tools/excel/ECOSCOpay.xlsb" target="_blank" rel="noopener noreferrer" class="mini-tool">
                         <span class="type-badge excel">Excel</span>
-                        <strong>ECO/SCO Payment Estimator</strong>
+                        <strong><span class="tip" data-tip="Enhanced Coverage Option — area-based coverage above SCO">ECO</span>/<span class="tip" data-tip="Supplemental Coverage Option — area-based crop insurance add-on">SCO</span> Payment Estimator</strong>
                         <span>Area-based add-on insurance analysis</span>
                     </a>
                     
