--- a/fastfacts.html
+++ b/fastfacts.html
@@ -151,7 +151,7 @@
         
         <div class="source-note">
             <span>📊</span>
-            <span>State data from <a href="https://www.nass.usda.gov/AgCensus/" target="_blank" rel="noopener noreferrer">USDA Census of Agriculture 2022</a>.</span>
+            <span>State data from <a href="https://www.nass.usda.gov/AgCensus/" target="_blank" rel="noopener noreferrer"><span class="tip" data-tip="United States Department of Agriculture">USDA</span> Census of Agriculture 2022</a>.</span>
             <a href="/quickstats.html" style="margin-left: auto;">View more data →</a>
         </div>
         
@@ -347,7 +347,7 @@
                         <div class="item"><span>Anhydrous</span><span>82-0-0</span></div>
                         <div class="item"><span>UAN 28%</span><span>28-0-0</span></div>
                         <div class="item"><span>Urea</span><span>46-0-0</span></div>
-                        <div class="item"><span>AMS</span><span>21-0-0-24S</span></div>
+                        <div class="item"><span><span class="tip" data-tip="Agricultural Marketing Service — USDA division for market reports">AMS</span></span><span>21-0-0-24S</span></div>
                     </div>
                     <div class="conv-box">
                         <h4>Phosphorus Sources</h4>
@@ -425,9 +425,9 @@
                 <div class="tools-grid">
                     <a href="/breakeven.html" class="tool-link"><div class="icon">💰</div><div class="name">Break-Even</div><div class="desc">Full cost analysis</div></a>
                     <a href="/calculator.html" class="tool-link"><div class="icon">🏗️</div><div class="name">Grain Bin</div><div class="desc">Capacity calc</div></a>
-                    <a href="/gdu.html" class="tool-link"><div class="icon">🌡️</div><div class="name">GDU Tracker</div><div class="desc">Growing degrees</div></a>
+                    <a href="/gdu.html" class="tool-link"><div class="icon">🌡️</div><div class="name"><span class="tip" data-tip="Growing Degree Units — accumulated heat units for tracking crop development">GDU</span> Tracker</div><div class="desc">Growing degrees</div></a>
                     <a href="/cashbids.html" class="tool-link"><div class="icon">💵</div><div class="name">Cash Bids</div><div class="desc">Local prices</div></a>
-                    <a href="/quickstats.html" class="tool-link"><div class="icon">📊</div><div class="name">USDA Data</div><div class="desc">Quick Stats</div></a>
+                    <a href="/quickstats.html" class="tool-link"><div class="icon">📊</div><div class="name"><span class="tip" data-tip="United States Department of Agriculture">USDA</span> Data</div><div class="desc">Quick Stats</div></a>
                     <a href="/farmdoc.html" class="tool-link"><div class="icon">🎓</div><div class="name">Farmdoc</div><div class="desc">Crop insurance</div></a>
                 </div>
             </div>
