--- a/gdu.html
+++ b/gdu.html
@@ -50,7 +50,7 @@
     <div id="header"></div>
 
     <main id="main-content">
-        <nav class="breadcrumb"><a href="/">Home</a> → <a href="/tools.html">Tools</a> → GDU Calculator</nav>
+        <nav class="breadcrumb"><a href="/">Home</a> → <a href="/tools.html">Tools</a> → <span class="tip" data-tip="Growing Degree Units — accumulated heat units for tracking crop development">GDU</span> Calculator</nav>
         <div class="grid-2">
             <div class="panel">
                 <div class="panel-head"><h1>🌡️ <span class="tip" data-tip="Growing Degree Units — measures heat accumulation for crop staging">GDU</span> CALCULATOR</h1></div>
@@ -58,7 +58,7 @@
                     <div style="margin-bottom:20px">
                         <label>Hybrid Maturity (CRM)</label>
                         <select id="crm" aria-label="Select comparative relative maturity" onchange="calcGDU()">
-                            <option value="80">80-day (2000 GDU)</option>
+                            <option value="80">80-day (2000 <span class="tip" data-tip="Growing Degree Units — accumulated heat units for tracking crop development">GDU</span>)</option>
                             <option value="90">90-day (2300 GDU)</option>
                             <option value="100" selected>100-day (2500 GDU)</option>
                             <option value="110">110-day (2700 GDU)</option>
