--- a/market-news.html
+++ b/market-news.html
@@ -102,8 +102,8 @@
         <nav class="breadcrumb"><a href="/">Home</a> → <a href="/tools.html">Tools</a> → Market News</nav>
 
         <div class="hero">
-            <h1>📰 USDA Market News</h1>
-            <p>Official USDA AMS market reports • Grain, dairy, and livestock prices by region</p>
+            <h1>📰 <span class="tip" data-tip="United States Department of Agriculture">USDA</span> Market News</h1>
+            <p>Official <span class="tip" data-tip="United States Department of Agriculture">USDA</span> <span class="tip" data-tip="Agricultural Marketing Service — USDA division for market reports">AMS</span> market reports • Grain, dairy, and livestock prices by region</p>
         </div>
 
         <div class="state-bar">
@@ -156,12 +156,12 @@
                 <div class="panel-body">
                     <div class="report-grid">
                         <a href="https://www.ams.usda.gov/market-news/dairy" target="_blank" rel="noopener noreferrer" class="report-card"><h3>🧀 National Dairy Reports</h3><p>All dairy product prices and production data</p><span class="action">View Reports →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/search-market-news" target="_blank" rel="noopener noreferrer" class="report-card"><h3>🔍 Search AMS Reports</h3><p>Search all USDA market news reports by keyword</p><span class="action">Search →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/search-market-news" target="_blank" rel="noopener noreferrer" class="report-card"><h3>🔍 Search <span class="tip" data-tip="Agricultural Marketing Service — USDA division for market reports">AMS</span> Reports</h3><p>Search all USDA market news reports by keyword</p><span class="action">Search →</span></a>
                         <a href="https://mymarketnews.ams.usda.gov/public_data" target="_blank" rel="noopener noreferrer" class="report-card"><h3>📊 Market News Database</h3><p>Searchable dairy, grain & livestock data</p><span class="action">View Database →</span></a>
                         <a href="/milk-prices.html" class="report-card"><h3>🥛 AGSIST Milk Dashboard</h3><p>Class III/IV prices, cheese, butter trends</p><span class="action">Open Dashboard →</span></a>
                     </div>
                     <div class="info-box" style="margin-top:16px;">
-                        <strong>🧀 Wisconsin Dairy:</strong> Wisconsin produces ~26% of US cheese. Class III prices (cheese-based) directly affect WI dairy farmer income. Track cheese spot prices daily at CME.
+                        <strong>🧀 Wisconsin Dairy:</strong> Wisconsin produces ~26% of US cheese. Class III prices (cheese-based) directly affect WI dairy farmer income. Track cheese spot prices daily at <span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span>.
                     </div>
                 </div>
             </div>
@@ -225,7 +225,7 @@
                         <div class="guide-item"><h4>Choice vs Select</h4><p>Beef quality grades. Choice is higher marbling. Choice-Select spread indicates consumer demand.</p></div>
                         <div class="guide-item"><h4>Cutout Value</h4><p>Calculated wholesale price of a carcass. Tracks packer profitability.</p></div>
                         <div class="guide-item"><h4>Class III Milk</h4><p>Price based on cheese & whey. Determines most WI dairy farmer payments.</p></div>
-                        <div class="guide-item"><h4>Block vs Barrel</h4><p>Two forms of cheese traded at CME. Blocks = retail, Barrels = processors.</p></div>
+                        <div class="guide-item"><h4>Block vs Barrel</h4><p>Two forms of cheese traded at <span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span>. Blocks = retail, Barrels = processors.</p></div>
                         <div class="guide-item"><h4>Dressed Weight</h4><p>Carcass weight after processing. Cattle: ~63% of live weight. Hogs: ~75%.</p></div>
                     </div>
                     <div class="info-box" style="margin-top:16px;">
