--- a/offices.html
+++ b/offices.html
@@ -65,7 +65,7 @@
     <main id="main-content">
         <nav class="breadcrumb"><a href="/">Home</a> → Offices</nav>
         <div class="panel">
-            <div class="panel-head"><h1>🏛️ USDA Office Finder — All 50 States</h1></div>
+            <div class="panel-head"><h1>🏛️ <span class="tip" data-tip="United States Department of Agriculture">USDA</span> Office Finder — All 50 States</h1></div>
             <div class="panel-body">
                 <div class="search-row">
                     <select id="stateSelect" aria-label="Select state"><option value="">Select your state...</option></select>
@@ -78,7 +78,7 @@
             <div class="panel-head"><h2>🔗 Quick Links</h2></div>
             <div class="panel-body">
                 <div class="quick-grid">
-                    <a href="https://offices.sc.egov.usda.gov/locator/app" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🔍 Service Center Locator</span><small>Find any USDA office by address</small></a>
+                    <a href="https://offices.sc.egov.usda.gov/locator/app" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🔍 Service Center Locator</span><small>Find any <span class="tip" data-tip="United States Department of Agriculture">USDA</span> office by address</small></a>
                     <a href="https://www.farmers.gov/" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🌾 Farmers.gov</span><small>Programs, loans, disaster assistance</small></a>
                     <a href="https://www.fsa.usda.gov/programs-and-services/" target="_blank" rel="noopener noreferrer" class="quick-card"><span>📋 <span class="tip" data-tip="Farm Service Agency — farm programs &amp; loans">FSA</span> Programs</span><small><span class="tip" data-tip="Conservation Reserve Program">CRP</span>, <span class="tip" data-tip="Agriculture Risk Coverage">ARC</span>, <span class="tip" data-tip="Price Loss Coverage">PLC</span>, loans</small></a>
                     <a href="https://www.nrcs.usda.gov/getting-assistance" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🌱 <span class="tip" data-tip="Natural Resources Conservation Service">NRCS</span> Assistance</span><small><span class="tip" data-tip="Environmental Quality Incentives Program">EQIP</span>, <span class="tip" data-tip="Conservation Stewardship Program">CSP</span>, conservation</small></a>
