--- a/quickstats.html
+++ b/quickstats.html
@@ -102,11 +102,11 @@
 <body>
     <div id="header"></div>
     <main id="main-content">
-        <nav class="breadcrumb"><a href="/">Home</a> → <a href="/tools.html">Tools</a> → USDA Quick Stats</nav>
+        <nav class="breadcrumb"><a href="/">Home</a> → <a href="/tools.html">Tools</a> → <span class="tip" data-tip="United States Department of Agriculture">USDA</span> Quick Stats</nav>
         
         <div class="hero">
-            <h1>📊 USDA Quick Stats Explorer</h1>
-            <p>Build queries and access official USDA agricultural statistics. All data links directly to USDA NASS - the authoritative source.</p>
+            <h1>📊 <span class="tip" data-tip="United States Department of Agriculture">USDA</span> Quick Stats Explorer</h1>
+            <p>Build queries and access official USDA agricultural statistics. All data links directly to USDA <span class="tip" data-tip="National Agricultural Statistics Service — USDA data and surveys">NASS</span> - the authoritative source.</p>
             <div class="hero-badges">
                 <span class="hero-badge">Official USDA Data</span>
                 <span class="hero-badge">County-Level Detail</span>
@@ -126,7 +126,7 @@
             <div class="panel-body">
                 <div class="quick-grid" id="quickLinks"></div>
                 <div class="info-box">
-                    <strong>💡 How this works:</strong> Each card opens the official USDA Quick Stats website with pre-filled search parameters for <span id="stateNameDisplay">your state</span>. All data comes directly from USDA NASS.
+                    <strong>💡 How this works:</strong> Each card opens the official USDA Quick Stats website with pre-filled search parameters for <span id="stateNameDisplay">your state</span>. All data comes directly from USDA <span class="tip" data-tip="National Agricultural Statistics Service — USDA data and surveys">NASS</span>.
                 </div>
             </div>
         </div>
