--- a/soils.html
+++ b/soils.html
@@ -125,7 +125,7 @@
 
         <div class="hero">
             <h1>🗺️ Soil Survey Lookup</h1>
-            <p>Look up real soil data from USDA NRCS • Enter any address or GPS coordinates</p>
+            <p>Look up real soil data from <span class="tip" data-tip="United States Department of Agriculture">USDA</span> <span class="tip" data-tip="Natural Resources Conservation Service — soil surveys and conservation programs">NRCS</span> • Enter any address or GPS coordinates</p>
         </div>
 
         <div class="search-bar">
@@ -175,7 +175,7 @@
                             <tr><td class="hl">Moderately Well</td><td>1.5-3 ft seasonally</td><td>Good for crops, some spring wetness.</td><td>Sometimes</td></tr>
                             <tr><td class="hl">Somewhat Poorly</td><td>1-2 ft seasonally</td><td>Spring delays, compaction risk. Tile improves.</td><td>Recommended</td></tr>
                             <tr><td class="hl">Poorly Drained</td><td>0-1 ft seasonally</td><td>Frequent saturation. Tile required for row crops.</td><td>Required</td></tr>
-                            <tr><td class="hl">Very Poorly</td><td>At/above surface</td><td>Wetland conditions. May qualify for CRP/WRP.</td><td>Major investment</td></tr>
+                            <tr><td class="hl">Very Poorly</td><td>At/above surface</td><td>Wetland conditions. May qualify for <span class="tip" data-tip="Conservation Reserve Program — annual rental payments for retiring land">CRP</span>/WRP.</td><td>Major investment</td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -208,7 +208,7 @@
 
         <!-- Farmland Classification -->
         <div class="panel">
-            <div class="panel-head"><h2>🏆 NRCS Farmland Classifications</h2></div>
+            <div class="panel-head"><h2>🏆 <span class="tip" data-tip="Natural Resources Conservation Service — soil surveys and conservation programs">NRCS</span> Farmland Classifications</h2></div>
             <div class="panel-body">
                 <div class="ref-grid">
                     <div class="ref-box">
@@ -236,7 +236,7 @@
                         <h4>Not Prime Farmland</h4>
                         <div class="item"><span>Definition</span><span class="val">Significant limitations</span></div>
                         <div class="item"><span>Issues</span><span class="val">Steep, rocky, wet</span></div>
-                        <div class="item"><span>Best Use</span><span class="val">Pasture, timber, CRP</span></div>
+                        <div class="item"><span>Best Use</span><span class="val">Pasture, timber, <span class="tip" data-tip="Conservation Reserve Program — annual rental payments for retiring land">CRP</span></span></div>
                         <div class="item"><span>Value</span><span class="val">Lower</span></div>
                     </div>
                 </div>
