--- a/soybean-prices.html
+++ b/soybean-prices.html
@@ -127,7 +127,7 @@
                             </a>
                             <a href="https://www.cmegroup.com/markets/agriculture/oilseeds/soybean.quotes.html" target="_blank" rel="noopener noreferrer" class="price-source">
                                 <div class="price-source-icon">🏛️</div>
-                                <div class="price-source-name">CME Group</div>
+                                <div class="price-source-name"><span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span> Group</div>
                                 <div class="price-source-desc">Official Data</div>
                             </a>
                             <a href="https://finance.yahoo.com/quote/ZS=F/" target="_blank" rel="noopener noreferrer" class="price-source">
@@ -171,13 +171,13 @@
                             <div class="complex-card">
                                 <div class="complex-card-icon">🫘</div>
                                 <div class="complex-card-name">Soybeans</div>
-                                <div class="complex-card-symbol">ZS - CBOT</div>
+                                <div class="complex-card-symbol">ZS - <span class="tip" data-tip="Chicago Board of Trade — primary grain futures exchange">CBOT</span></div>
                                 <a href="https://www.barchart.com/futures/quotes/ZS*0" target="_blank" rel="noopener noreferrer">View ZS →</a>
                             </div>
                             <div class="complex-card">
                                 <div class="complex-card-icon">🥜</div>
                                 <div class="complex-card-name">Soybean Meal</div>
-                                <div class="complex-card-symbol">ZM - CBOT</div>
+                                <div class="complex-card-symbol">ZM - <span class="tip" data-tip="Chicago Board of Trade — primary grain futures exchange">CBOT</span></div>
                                 <a href="https://www.barchart.com/futures/quotes/ZM*0" target="_blank" rel="noopener noreferrer">View ZM →</a>
                             </div>
                             <div class="complex-card">
@@ -210,7 +210,7 @@
                         </div>
                         <div class="link-grid">
                             <a href="https://www.barchart.com/futures/quotes/ZS*0/soybean-crush" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📊 Barchart Crush Spread</span><span>Chart</span></a>
-                            <a href="https://www.cmegroup.com/trading/agricultural/soybean-crush.html" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🏛️ CME Crush Calculator</span><span>Tool</span></a>
+                            <a href="https://www.cmegroup.com/trading/agricultural/soybean-crush.html" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🏛️ <span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span> Crush Calculator</span><span>Tool</span></a>
                             <a href="https://www.nopa.org/resources/monthly-updates/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🏭 NOPA Crush Report</span><span>Monthly</span></a>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                         </div>
                         <div class="link-grid">
                             <a href="https://english.customs.gov.cn/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🇨🇳 China Customs Data</span><span>Imports</span></a>
-                            <a href="https://apps.fas.usda.gov/psdonline/app/index.html#/app/advQuery" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📊 PSD Online</span><span>USDA Data</span></a>
+                            <a href="https://apps.fas.usda.gov/psdonline/app/index.html#/app/advQuery" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📊 PSD Online</span><span><span class="tip" data-tip="United States Department of Agriculture">USDA</span> Data</span></a>
                             <a href="https://www.reuters.com/markets/commodities/grains/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📰 Reuters Grains</span><span>China news</span></a>
                         </div>
                     </div>
@@ -309,15 +309,15 @@
                 <!-- USDA REPORTS -->
                 <div class="dash-section">
                     <div class="dash-section-head" onclick="toggleSection(this)">
-                        <h2>📊 USDA REPORTS</h2>
+                        <h2>📊 <span class="tip" data-tip="United States Department of Agriculture">USDA</span> REPORTS</h2>
                         <span class="toggle">−</span>
                     </div>
                     <div class="dash-section-body">
                         <div class="link-grid">
-                            <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 WASDE Report</span><span>Monthly ~10th</span></a>
+                            <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 <span class="tip" data-tip="World Ag Supply &amp; Demand Estimates — monthly USDA report that moves markets">WASDE</span> Report</span><span>Monthly ~10th</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/8336h188j" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🚢 Export Sales</span><span>Thu 8:30am</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/c534fn92g" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🌱 Crop Progress</span><span>Mon 4pm</span></a>
-                            <a href="https://usda.library.cornell.edu/concern/publications/3t945q76s" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🛢️ Oilseed Crushings</span><span>NASS</span></a>
+                            <a href="https://usda.library.cornell.edu/concern/publications/3t945q76s" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🛢️ Oilseed Crushings</span><span><span class="tip" data-tip="National Agricultural Statistics Service — USDA data and surveys">NASS</span></span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/xg94hp534" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🏭 Grain Stocks</span><span>Quarterly</span></a>
                         </div>
                         <a href="/calendar.html" style="display:block;margin-top:12px;padding:12px;background:var(--accent);color:black;text-align:center;border-radius:6px;text-decoration:none;font-weight:600;font-size:0.8rem">📅 View Full Report Calendar →</a>
@@ -379,7 +379,7 @@
                             <div class="data-card">
                                 <div class="data-card-label">Carryout</div>
                                 <div class="data-card-value">Watch</div>
-                                <div class="data-card-sub">WASDE</div>
+                                <div class="data-card-sub"><span class="tip" data-tip="World Ag Supply &amp; Demand Estimates — monthly USDA report that moves markets">WASDE</span></div>
                             </div>
                         </div>
                     </div>
