--- a/terms.html
+++ b/terms.html
@@ -144,7 +144,7 @@
         <p>AGSIST provides free agricultural tools and market information including:</p>
         <ul>
             <li>Commodity price tracking and display</li>
-            <li>Calculators (grain bin, GDU, break-even, etc.)</li>
+            <li>Calculators (grain bin, <span class="tip" data-tip="Growing Degree Units — accumulated heat units for tracking crop development">GDU</span>, break-even, etc.)</li>
             <li>Reference information and educational content</li>
             <li>Links to external agricultural resources</li>
         </ul>
@@ -168,7 +168,7 @@
         <p>For professional advice, consult licensed professionals in your area.</p>
 
         <h2>External Links</h2>
-        <p>AGSIST links to third-party websites (USDA, Extension services, market sources, etc.) for your convenience. We are not responsible for the content, accuracy, or availability of external sites.</p>
+        <p>AGSIST links to third-party websites (<span class="tip" data-tip="United States Department of Agriculture">USDA</span>, Extension services, market sources, etc.) for your convenience. We are not responsible for the content, accuracy, or availability of external sites.</p>
 
         <h2>Limitation of Liability</h2>
         <p>AGSIST and its operators shall not be liable for any damages arising from:</p>
