--- a/tools.html
+++ b/tools.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="tool-card">
                         <h3>🌾 Crop Progress</h3>
-                        <p>USDA crop progress data: planting, emergence, condition ratings. Links to latest <span class="tip" data-tip="National Agricultural Statistics Service">NASS</span> reports by state.</p>
+                        <p><span class="tip" data-tip="United States Department of Agriculture">USDA</span> crop progress data: planting, emergence, condition ratings. Links to latest <span class="tip" data-tip="National Agricultural Statistics Service">NASS</span> reports by state.</p>
                         <a href="/crop-progress.html">View Progress →</a>
                     </div>
                     <div class="tool-card">
@@ -109,7 +109,7 @@
                     </div>
                     <div class="tool-card">
                         <h3>📰 Market News</h3>
-                        <p>USDA <span class="tip" data-tip="Agricultural Marketing Service">AMS</span> market reports: grain, dairy, livestock. Direct links to latest official market news data.</p>
+                        <p><span class="tip" data-tip="United States Department of Agriculture">USDA</span> <span class="tip" data-tip="Agricultural Marketing Service">AMS</span> market reports: grain, dairy, livestock. Direct links to latest official market news data.</p>
                         <a href="/market-news.html">View Reports →</a>
                     </div>
                     <div class="tool-card">
