--- a/calendar.html
+++ b/calendar.html
@@ -76,7 +76,7 @@
     <main id="main-content">
         <nav class="breadcrumb"><a href="/">Home</a> → Calendar</nav>
         <div class="panel">
-            <div class="panel-head"><h1>📅 USDA Report Calendar — 2026</h1></div>
+            <div class="panel-head"><h1>📅 <span class="tip" data-tip="United States Department of Agriculture">USDA</span> Report Calendar — 2026</h1></div>
             <div class="panel-body">
                 <div class="cal-stats" id="stats"></div>
                 <div class="legend">
@@ -92,7 +92,7 @@
             <div class="panel-head"><h2>📊 Report Guide</h2></div>
             <div class="panel-body">
                 <div class="guide-grid">
-                    <div class="guide-card"><h3>WASDE</h3><p>World Agricultural Supply & Demand Estimates. The most market-moving USDA report. Updates global production, ending stocks for all major commodities. Limit moves are common on release day.</p><div class="meta">Monthly ~12th · 12:00 PM ET · <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
+                    <div class="guide-card"><h3><span class="tip" data-tip="World Ag Supply &amp; Demand Estimates — monthly USDA report that moves markets">WASDE</span></h3><p>World Agricultural Supply & Demand Estimates. The most market-moving <span class="tip" data-tip="United States Department of Agriculture">USDA</span> report. Updates global production, ending stocks for all major commodities. Limit moves are common on release day.</p><div class="meta">Monthly ~12th · 12:00 PM ET · <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
                     <div class="guide-card"><h3>Crop Progress</h3><p>Weekly planting, crop condition, and harvest progress. The "Good + Excellent" percentage is the key metric — below 60% signals trouble, above 70% is bearish. Runs April through November.</p><div class="meta">Mondays · 4:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/8336h188j" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
                     <div class="guide-card"><h3>Grain Stocks</h3><p>Quarterly on-farm and off-farm grain inventories. Often reveals tighter or looser stocks than the trade expects. September report sets final old-crop carryout.</p><div class="meta">Quarterly · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/xg94hp534" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
                     <div class="guide-card"><h3>Prospective Plantings</h3><p>March survey of farmer planting intentions. First real signal of next crop year's supply picture. Corn vs soybean acreage split drives the spring price spread.</p><div class="meta">March 31 · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/x633f100h" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
