--- a/corn-prices.html
+++ b/corn-prices.html
@@ -172,7 +172,7 @@
                             </a>
                             <a href="https://www.cmegroup.com/markets/agriculture/grains/corn.quotes.html" target="_blank" rel="noopener noreferrer" class="price-source">
                                 <div class="price-source-icon">🏛️</div>
-                                <div class="price-source-name">CME Group</div>
+                                <div class="price-source-name"><span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span> Group</div>
                                 <div class="price-source-desc">Official Data</div>
                             </a>
                             <a href="https://finance.yahoo.com/quote/ZC=F/" target="_blank" rel="noopener noreferrer" class="price-source">
@@ -246,18 +246,18 @@
                 <!-- USDA REPORTS -->
                 <div class="dash-section">
                     <div class="dash-section-head" onclick="toggleSection(this)">
-                        <h2>📊 USDA REPORTS</h2>
+                        <h2>📊 <span class="tip" data-tip="United States Department of Agriculture">USDA</span> REPORTS</h2>
                         <span class="toggle">−</span>
                     </div>
                     <div class="dash-section-body">
                         <div class="link-grid">
-                            <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 WASDE Report</span><span>Monthly ~10th</span></a>
+                            <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 <span class="tip" data-tip="World Ag Supply &amp; Demand Estimates — monthly USDA report that moves markets">WASDE</span> Report</span><span>Monthly ~10th</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/8336h188j" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🚢 Export Sales</span><span>Thu 8:30am</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/c534fn92g" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🌱 Crop Progress</span><span>Mon 4pm (season)</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/xg94hp534" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🏭 Grain Stocks</span><span>Quarterly</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/x633f100h" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🚜 Prospective Plantings</span><span>Late March</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/j098zb09z" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📐 Acreage Report</span><span>Late June</span></a>
-                            <a href="https://www.nass.usda.gov/Quick_Stats/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📚 NASS Quick Stats</span><span>Database</span></a>
+                            <a href="https://www.nass.usda.gov/Quick_Stats/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📚 <span class="tip" data-tip="National Agricultural Statistics Service — USDA data and surveys">NASS</span> Quick Stats</span><span>Database</span></a>
                         </div>
                         <a href="/calendar.html" style="display:block;margin-top:12px;padding:12px;background:var(--accent);color:black;text-align:center;border-radius:6px;text-decoration:none;font-weight:600;font-size:0.8rem">📅 View Full Report Calendar →</a>
                     </div>
@@ -276,7 +276,7 @@
                         <div class="link-grid">
                             <a href="https://www.eia.gov/petroleum/ethanolcapacity/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🏭 Ethanol Production (EIA)</span><span>Weekly</span></a>
                             <a href="https://www.eia.gov/dnav/pet/pet_pnp_wprode_s1_w.htm" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📊 Weekly Ethanol Stats</span><span>EIA</span></a>
-                            <a href="https://www.cmegroup.com/markets/energy/biofuels/denatured-fuel-ethanol.html" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 Ethanol Futures (CME)</span><span>CME Group</span></a>
+                            <a href="https://www.cmegroup.com/markets/energy/biofuels/denatured-fuel-ethanol.html" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 Ethanol Futures (<span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span>)</span><span>CME Group</span></a>
                             <a href="https://www.barchart.com/futures/quotes/RB*0" target="_blank" rel="noopener noreferrer" class="link-item external"><span>⛽ RBOB Gasoline</span><span>Barchart</span></a>
                             <a href="https://ethanolrfa.org/markets-and-statistics/annual-ethanol-production" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📚 RFA Statistics</span><span>Annual data</span></a>
                             <a href="https://grains.org/ethanol-2/ethanol-market-and-pricing-data/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>💵 Ethanol Margins</span><span>USGC</span></a>
@@ -312,7 +312,7 @@
                         </div>
                         <div class="link-grid">
                             <a href="https://usda.library.cornell.edu/concern/publications/8336h188j" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📋 Export Sales Report</span><span>Thu 8:30am</span></a>
-                            <a href="https://www.ams.usda.gov/market-news/grain-and-oilseeds" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🚚 Export Inspections</span><span>AMS Weekly</span></a>
+                            <a href="https://www.ams.usda.gov/market-news/grain-and-oilseeds" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🚚 Export Inspections</span><span><span class="tip" data-tip="Agricultural Marketing Service — USDA division for market reports">AMS</span> Weekly</span></a>
                             <a href="https://apps.fas.usda.gov/gats/default.aspx" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🌐 GATS Trade Data</span><span>FAS Database</span></a>
                             <a href="https://ipad.fas.usda.gov/cropexplorer/pecad/main.aspx" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🗺️ PSD Online</span><span>Global S&D</span></a>
                         </div>
@@ -353,7 +353,7 @@
                     </div>
                     <div class="dash-section-body">
                         <div class="info-card" style="margin-bottom:12px">
-                            <p>Key metrics from USDA WASDE. Updated monthly around the 10th.</p>
+                            <p>Key metrics from <span class="tip" data-tip="United States Department of Agriculture">USDA</span> <span class="tip" data-tip="World Ag Supply &amp; Demand Estimates — monthly USDA report that moves markets">WASDE</span>. Updated monthly around the 10th.</p>
                         </div>
                         <div class="data-grid">
                             <div class="data-card">
@@ -440,12 +440,12 @@
                 <!-- COT & POSITIONING -->
                 <div class="dash-section">
                     <div class="dash-section-head" onclick="toggleSection(this)">
-                        <h2>📊 COT & POSITIONING</h2>
+                        <h2>📊 <span class="tip" data-tip="Commitments of Traders — weekly CFTC report on futures positions">COT</span> & POSITIONING</h2>
                         <span class="toggle">−</span>
                     </div>
                     <div class="dash-section-body">
                         <div class="info-card" style="margin-bottom:12px">
-                            <p><strong>Commitment of Traders (COT)</strong> shows hedge fund and commercial positioning. Large managed money shorts can fuel rallies; large longs can pressure prices.</p>
+                            <p><strong>Commitment of Traders (<span class="tip" data-tip="Commitments of Traders — weekly CFTC report on futures positions">COT</span>)</strong> shows hedge fund and commercial positioning. Large managed money shorts can fuel rallies; large longs can pressure prices.</p>
                         </div>
                         <div class="link-grid">
                             <a href="https://www.cftc.gov/dea/futures/ag_lf.htm" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📋 CFTC COT Report</span><span>Fri 3:30pm</span></a>
@@ -465,7 +465,7 @@
                         <div class="link-grid">
                             <a href="/breakeven.html" class="link-item"><span>💰 Break-Even Calculator</span><span>Cost/bushel</span></a>
                             <a href="/calculator.html" class="link-item"><span>🌾 Grain Bin Calculator</span><span>Capacity</span></a>
-                            <a href="/gdu.html" class="link-item"><span>🌡️ GDU Calculator</span><span>Growing degrees</span></a>
+                            <a href="/gdu.html" class="link-item"><span>🌡️ <span class="tip" data-tip="Growing Degree Units — accumulated heat units for tracking crop development">GDU</span> Calculator</span><span>Growing degrees</span></a>
                             <a href="/fastfacts.html" class="link-item"><span>📊 Fast Facts Reference</span><span>Quick data</span></a>
                             <a href="/learn.html" class="link-item"><span>📚 Marketing Guide</span><span>Education</span></a>
                         </div>
@@ -498,7 +498,7 @@
                     </div>
                     <div class="dash-section-body">
                         <div class="data-grid">
-                            <div class="data-card"><div class="data-card-label">Exchange</div><div class="data-card-value">CBOT</div></div>
+                            <div class="data-card"><div class="data-card-label">Exchange</div><div class="data-card-value"><span class="tip" data-tip="Chicago Board of Trade — primary grain futures exchange">CBOT</span></div></div>
                             <div class="data-card"><div class="data-card-label">Symbol</div><div class="data-card-value">ZC</div></div>
                             <div class="data-card"><div class="data-card-label">Size</div><div class="data-card-value">5,000 bu</div></div>
                             <div class="data-card"><div class="data-card-label">Tick</div><div class="data-card-value">¼¢</div><div class="data-card-sub">= $12.50</div></div>
