--- a/milk-prices.html
+++ b/milk-prices.html
@@ -96,7 +96,7 @@
 
             <div class="dash-hero">
                 <h1>🥛 MILK & DAIRY DASHBOARD</h1>
-                <p>Class III/IV • Cheese • Butter • DMC Margins • Feed Costs • Global Trade</p>
+                <p>Class III/IV • Cheese • Butter • <span class="tip" data-tip="Dairy Margin Coverage — safety net program for dairy farmers">DMC</span> Margins • Feed Costs • Global Trade</p>
             </div>
 
             <div class="dash-grid">
@@ -121,12 +121,12 @@
                             </div>
                             <div class="product-card" style="border-left-color:#f97316">
                                 <h4>🧀 Cheese (CSC)</h4>
-                                <p><strong>CME cheese futures.</strong> Cash cheese prices drive Class III settlement. 40-lb blocks & 500-lb barrels.</p>
+                                <p><strong><span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span> cheese futures.</strong> Cash cheese prices drive Class III settlement. 40-lb blocks & 500-lb barrels.</p>
                                 <a href="https://www.barchart.com/futures/quotes/CS*0/interactive-chart" target="_blank" rel="noopener noreferrer">View Cheese Chart →</a>
                             </div>
                             <div class="product-card" style="border-left-color:#eab308">
                                 <h4>🧈 Butter (CB)</h4>
-                                <p><strong>CME butter futures.</strong> Grade AA butter. Strong domestic + export demand. Seasonal holiday peaks.</p>
+                                <p><strong><span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span> butter futures.</strong> Grade AA butter. Strong domestic + export demand. Seasonal holiday peaks.</p>
                                 <a href="https://www.barchart.com/futures/quotes/CB*0/interactive-chart" target="_blank" rel="noopener noreferrer">View Butter Chart →</a>
                             </div>
                             <div class="product-card" style="border-left-color:#8b5cf6">
@@ -137,7 +137,7 @@
                             <div class="product-card" style="border-left-color:#06b6d4">
                                 <h4>🥄 Dry Whey</h4>
                                 <p><strong>Whey protein pricing.</strong> Byproduct of cheese. Used in infant formula, sports nutrition.</p>
-                                <a href="https://www.ams.usda.gov/market-news/dairy" target="_blank" rel="noopener noreferrer">USDA Whey Prices →</a>
+                                <a href="https://www.ams.usda.gov/market-news/dairy" target="_blank" rel="noopener noreferrer"><span class="tip" data-tip="United States Department of Agriculture">USDA</span> Whey Prices →</a>
                             </div>
                         </div>
                     </div>
@@ -193,14 +193,14 @@
                     </div>
                     <div class="dash-section-body">
                         <div class="info-card" style="margin-bottom:12px">
-                            <h4>Dairy Margin Coverage (DMC)</h4>
+                            <h4>Dairy Margin Coverage (<span class="tip" data-tip="Dairy Margin Coverage — safety net program for dairy farmers">DMC</span>)</h4>
                             <p><strong>Milk Price − Feed Cost = Margin</strong><br><br>
-                            USDA program pays when margin falls below coverage level ($4.00-$9.50/<span class="tip" data-tip="Hundredweight — 100 pounds">cwt</span>). Feed cost = (corn price × 1.0728) + (soybean meal × 0.00735) + (alfalfa hay × 0.0137).</p>
+                            <span class="tip" data-tip="United States Department of Agriculture">USDA</span> program pays when margin falls below coverage level ($4.00-$9.50/<span class="tip" data-tip="Hundredweight — 100 pounds">cwt</span>). Feed cost = (corn price × 1.0728) + (soybean meal × 0.00735) + (alfalfa hay × 0.0137).</p>
                         </div>
                         <div class="link-grid">
-                            <a href="https://www.fsa.usda.gov/programs-and-services/dairy-margin-coverage-program/index" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🏛️ FSA DMC Program</span><span>Official</span></a>
+                            <a href="https://www.fsa.usda.gov/programs-and-services/dairy-margin-coverage-program/index" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🏛️ <span class="tip" data-tip="Farm Service Agency — USDA office for farm programs, loans, and payments">FSA</span> DMC Program</span><span>Official</span></a>
                             <a href="https://dairymarkets.org/Tools/DMC/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📊 DMC Decision Tool</span><span>UW-Madison</span></a>
-                            <a href="https://www.ams.usda.gov/sites/default/files/media/DairyMarginCoverageMarginandFeedCost.pdf" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📄 Monthly DMC Margins</span><span>USDA AMS</span></a>
+                            <a href="https://www.ams.usda.gov/sites/default/files/media/DairyMarginCoverageMarginandFeedCost.pdf" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📄 Monthly DMC Margins</span><span>USDA <span class="tip" data-tip="Agricultural Marketing Service — USDA division for market reports">AMS</span></span></a>
                         </div>
                     </div>
                 </div>
@@ -232,11 +232,11 @@
                     </div>
                     <div class="dash-section-body">
                         <div class="link-grid">
-                            <a href="https://www.ams.usda.gov/market-news/dairy" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📰 AMS Dairy Market News</span><span>Daily/Weekly</span></a>
+                            <a href="https://www.ams.usda.gov/market-news/dairy" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📰 <span class="tip" data-tip="Agricultural Marketing Service — USDA division for market reports">AMS</span> Dairy Market News</span><span>Daily/Weekly</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/4b29b5974" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🥛 Milk Production</span><span>Monthly ~18th</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/dv13zs480" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🧀 Dairy Products</span><span>Monthly</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/ks65hb825" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🧊 Cold Storage</span><span>Monthly</span></a>
-                            <a href="https://usda.library.cornell.edu/concern/publications/r207tq16g" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📦 Dairy Outlook</span><span>WASDE</span></a>
+                            <a href="https://usda.library.cornell.edu/concern/publications/r207tq16g" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📦 Dairy Outlook</span><span><span class="tip" data-tip="World Ag Supply &amp; Demand Estimates — monthly USDA report that moves markets">WASDE</span></span></a>
                             <a href="https://www.ams.usda.gov/mnreports/dywweeklyreport.pdf" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📋 Weekly Dairy Report</span><span>AMS</span></a>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                         </div>
                         <div class="link-grid">
                             <a href="https://usda.library.cornell.edu/concern/publications/4b29b5974" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📊 Milk Production Report</span><span>Monthly</span></a>
-                            <a href="https://www.nass.usda.gov/Charts_and_Maps/Milk_Production_and_Milk_Cows/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 NASS Dairy Charts</span><span>Trends</span></a>
+                            <a href="https://www.nass.usda.gov/Charts_and_Maps/Milk_Production_and_Milk_Cows/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 <span class="tip" data-tip="National Agricultural Statistics Service — USDA data and surveys">NASS</span> Dairy Charts</span><span>Trends</span></a>
                         </div>
                     </div>
                 </div>
@@ -410,7 +410,7 @@
                     <div class="dash-section-body">
                         <div class="link-grid">
                             <a href="https://dairymarkets.org/Tools/DMC/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🛡️ DMC Decision Tool</span><span>UW-Madison</span></a>
-                            <a href="https://dairymarkets.org/Tools/FMMO/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📊 FMMO Price Calculator</span><span>UW-Madison</span></a>
+                            <a href="https://dairymarkets.org/Tools/FMMO/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📊 <span class="tip" data-tip="Federal Milk Marketing Order — dairy pricing system">FMMO</span> Price Calculator</span><span>UW-Madison</span></a>
                             <a href="https://acdivoca.org/resources/dairy-margin-monitor/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 Margin Monitor</span><span>ACDI/VOCA</span></a>
                             <a href="/breakeven.html" class="link-item"><span>💰 Break-Even Calculator</span><span>AGSIST</span></a>
                             <a href="/fastfacts.html" class="link-item"><span>📊 Fast Facts</span><span>Reference</span></a>
@@ -446,7 +446,7 @@
                                 <h4>Class III Milk (DC)</h4>
                                 <p><strong>Exchange:</strong> CME<br>
                                 <strong>Size:</strong> 200,000 lbs<br>
-                                <strong>Quote:</strong> $/cwt<br>
+                                <strong>Quote:</strong> $/<span class="tip" data-tip="Hundredweight — 100 pounds, standard unit for livestock pricing">cwt</span><br>
                                 <strong>Tick:</strong> $0.01 = $20<br>
                                 <strong>Months:</strong> All 12</p>
                             </div>
