--- a/wheat-prices.html
+++ b/wheat-prices.html
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="info-card" style="margin-top:12px">
-                            <p><strong>Protein premiums matter.</strong> Mills blend different classes to achieve target protein. HRS commands premium over HRW over SRW. Watch KC-Chicago and Minneapolis-KC spreads.</p>
+                            <p><strong>Protein premiums matter.</strong> Mills blend different classes to achieve target protein. <span class="tip" data-tip="Hard Red Spring wheat — grown in northern US, highest protein content">HRS</span> commands premium over <span class="tip" data-tip="Hard Red Winter wheat — grown in central US, used for bread flour">HRW</span> over <span class="tip" data-tip="Soft Red Winter wheat — grown in eastern US, used for pastry flour">SRW</span>. Watch KC-Chicago and Minneapolis-KC spreads.</p>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                             </a>
                             <a href="https://www.cmegroup.com/markets/agriculture/grains/wheat.quotes.html" target="_blank" rel="noopener noreferrer" class="price-source">
                                 <div class="price-source-icon">🏛️</div>
-                                <div class="price-source-name">CME Group</div>
+                                <div class="price-source-name"><span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span> Group</div>
                                 <div class="price-source-desc">Official Data</div>
                             </a>
                             <a href="https://finance.yahoo.com/quote/ZW=F/" target="_blank" rel="noopener noreferrer" class="price-source">
@@ -166,12 +166,12 @@
                             <a href="https://www.barchart.com/futures/quotes/KE*0" target="_blank" rel="noopener noreferrer" class="price-source">
                                 <div class="price-source-icon">🟤</div>
                                 <div class="price-source-name">KC Wheat</div>
-                                <div class="price-source-desc">HRW - KE</div>
+                                <div class="price-source-desc"><span class="tip" data-tip="Hard Red Winter wheat — grown in central US, used for bread flour">HRW</span> - KE</div>
                             </a>
                             <a href="https://www.barchart.com/futures/quotes/MW*0" target="_blank" rel="noopener noreferrer" class="price-source">
                                 <div class="price-source-icon">🟡</div>
                                 <div class="price-source-name">Mpls Wheat</div>
-                                <div class="price-source-desc">HRS - MWE</div>
+                                <div class="price-source-desc"><span class="tip" data-tip="Hard Red Spring wheat — grown in northern US, highest protein content">HRS</span> - MWE</div>
                             </a>
                         </div>
                         <div style="margin-top:16px">
@@ -294,12 +294,12 @@
                 <!-- USDA REPORTS -->
                 <div class="dash-section">
                     <div class="dash-section-head" onclick="toggleSection(this)">
-                        <h2>📊 USDA REPORTS</h2>
+                        <h2>📊 <span class="tip" data-tip="United States Department of Agriculture">USDA</span> REPORTS</h2>
                         <span class="toggle">−</span>
                     </div>
                     <div class="dash-section-body">
                         <div class="link-grid">
-                            <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 WASDE Report</span><span>Monthly ~10th</span></a>
+                            <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📈 <span class="tip" data-tip="World Ag Supply &amp; Demand Estimates — monthly USDA report that moves markets">WASDE</span> Report</span><span>Monthly ~10th</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/8336h188j" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🚢 Export Sales</span><span>Thu 8:30am</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/c534fn92g" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🌱 Crop Progress</span><span>Mon 4pm</span></a>
                             <a href="https://usda.library.cornell.edu/concern/publications/xg94hp534" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🏭 Grain Stocks</span><span>Quarterly</span></a>
@@ -318,11 +318,11 @@
                     </div>
                     <div class="dash-section-body">
                         <div class="info-card" style="margin-bottom:12px">
-                            <p><strong>US exports ~50% of wheat production.</strong> HRW goes to Mexico, Nigeria, Japan. HRS to Philippines, Japan, Taiwan. SRW to Mexico, Egypt. US competes with Black Sea on price.</p>
+                            <p><strong>US exports ~50% of wheat production.</strong> HRW goes to Mexico, Nigeria, Japan. HRS to Philippines, Japan, Taiwan. <span class="tip" data-tip="Soft Red Winter wheat — grown in eastern US, used for pastry flour">SRW</span> to Mexico, Egypt. US competes with Black Sea on price.</p>
                         </div>
                         <div class="link-grid">
                             <a href="https://usda.library.cornell.edu/concern/publications/8336h188j" target="_blank" rel="noopener noreferrer" class="link-item external"><span>📋 Export Sales Report</span><span>Thu 8:30am</span></a>
-                            <a href="https://www.ams.usda.gov/market-news/grain-and-oilseeds" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🚚 Export Inspections</span><span>AMS</span></a>
+                            <a href="https://www.ams.usda.gov/market-news/grain-and-oilseeds" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🚚 Export Inspections</span><span><span class="tip" data-tip="Agricultural Marketing Service — USDA division for market reports">AMS</span></span></a>
                             <a href="https://www.uswheat.org/" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🌾 US Wheat Associates</span><span>Industry</span></a>
                             <a href="https://apps.fas.usda.gov/gats/default.aspx" target="_blank" rel="noopener noreferrer" class="link-item external"><span>🌐 GATS Trade Data</span><span>FAS</span></a>
                         </div>
@@ -460,7 +460,7 @@
                     </div>
                     <div class="dash-section-body">
                         <div class="data-grid">
-                            <div class="data-card"><div class="data-card-label">Exchange</div><div class="data-card-value">CBOT</div></div>
+                            <div class="data-card"><div class="data-card-label">Exchange</div><div class="data-card-value"><span class="tip" data-tip="Chicago Board of Trade — primary grain futures exchange">CBOT</span></div></div>
                             <div class="data-card"><div class="data-card-label">Symbol</div><div class="data-card-value">ZW</div></div>
                             <div class="data-card"><div class="data-card-label">Size</div><div class="data-card-value">5,000 bu</div></div>
                             <div class="data-card"><div class="data-card-label">Tick</div><div class="data-card-value">¼¢</div><div class="data-card-sub">= $12.50</div></div>
@@ -480,7 +480,7 @@
 
             <div class="dash-footer">
                 <strong>Disclaimer:</strong> This dashboard aggregates publicly available data and links. Prices may be delayed. Nothing here constitutes financial advice. Futures trading involves substantial risk of loss.<br><br>
-                Data sources: <a href="https://www.usda.gov" target="_blank" rel="noopener noreferrer">USDA</a>, <a href="https://www.cmegroup.com" target="_blank" rel="noopener noreferrer">CME Group</a>, <a href="https://www.igc.int" target="_blank" rel="noopener noreferrer">IGC</a>, <a href="https://www.barchart.com" target="_blank" rel="noopener noreferrer">Barchart</a>
+                Data sources: <a href="https://www.usda.gov" target="_blank" rel="noopener noreferrer"><span class="tip" data-tip="United States Department of Agriculture">USDA</span></a>, <a href="https://www.cmegroup.com" target="_blank" rel="noopener noreferrer"><span class="tip" data-tip="Chicago Mercantile Exchange — derivatives exchange, parent of CBOT">CME</span> Group</a>, <a href="https://www.igc.int" target="_blank" rel="noopener noreferrer">IGC</a>, <a href="https://www.barchart.com" target="_blank" rel="noopener noreferrer">Barchart</a>
             </div>
         </div>
     </main>
